# JobFinder

./: .gitignore  README.md  main.py  structure.bat
backend/: requirements.txt  scraping_config.json
backend/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
backend/baml_src/: clients.baml  coverletter.baml  generators.baml
backend/core/: llm_manager copy.py  llm_manager.py  settings.py
backend/data/managers/: cover_letter_manager.py  document_manager.py
backend/data/models/: __init__.py  apply_form.py  cover_letter.py  job_offer.py
backend/local/: local.py
backend/local/menus/: base_menu.py  database_menu.py  document_menu.py  jobup_menu.py
backend/local/menus/scraping/: config.py  menu.py
backend/services/generation/: generator.py  keyword_generator.py  pdf_builder.py
backend/services/job_automation/jobup/: form_filler.py  login.py
database/: JobFinderDatabase.py
document_generation/: CoverAgent.py  README.md  main.py  pyproject.toml
document_generation/src/agent_cover_letter/: crew.py
document_generation/src/agent_cover_letter/config/: agents.yaml  tasks.yaml
document_generation/src/agent_cover_letter/tools/: CharCount.py  JsonMergerTool.py  PDFCoverTool.py  WordsCount.py
server/src/: getpdfcover.py  mainlocal.py  test.py  testgeneratepdf.py
server/src/core/: llm_manager.py  settings.py  task_manager.py
server/src/data/: database.py
server/src/local/: local.py
tests/: TestDatabase.py  TestDirectPDFView.py
ui/: MainWindow.py  user_list_window.py
(+31 files in other folders)
